k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpserver
  name: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          image: joey100/cncamp-httpserver:v2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          startupProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            failureThreshold: 30
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "200Mi"
              cpu: "150m"
            limits:
              memory: "300Mi"
              cpu: "300m"
          #lifecycle:
          #  preStop: # wait for iptables rules updated
          #    exec:
          #      command: [ "sh", "-c", "sleep 5" ]  # scratch no sh
      terminationGracePeriodSeconds: 40  # 
      restartPolicy: Always
