k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: "httpserver"
spec:
  selector:
    app: "httpserver"
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
