k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
        #tls:
        #- hosts:
        #- cncamp.com
        #secretName: cncamp-tls
  rules:
    - host: cncamp-httpserver.com
      http:
        paths:
          - path: /foo(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: httpserver
                port:
                  number: 80
